update dependencies, and some clean-up